--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -40,9 +41,9 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
   },
-	"husky": {
+  "husky": {
     "hooks": {
-      "pre-commit": "npm test", 
+      "pre-commit": "npm test && npm run eslint",
       "pre-push": "npm test",
       "...": "..."
     }
