--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "license": "MIT",
   "dependencies": {
     "@react-google-maps/api": "^2.7.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.2",
     "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^6.0.2"
   },
