--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-leaflet": "^3.2.2",
     "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^6.0.2"
@@ -31,6 +32,7 @@
     "@babel/preset-react": "^7.16.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
