--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-leaflet": "^3.2.2",
+    "react-loading": "^2.0.3",
     "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^6.0.2"
   },
